--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ header {
     border: 1px solid transparent;
     transition: all .5s;
     border-radius: 40px;
-    color: #fff;
+    color: white;
     cursor: pointer;
     outline: 0;
     line-height: 18px;
@@ -181,7 +181,7 @@ header {
     font-weight: 900;
     background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
     background-size: 200%;
-    color: #fff;
+    color: white;
     margin-right: 10px;
 }
 
@@ -196,7 +196,7 @@ header {
     background-size: 200%;
     border: 1px solid transparent;
     border-radius: 40px;
-    color: #fff;
+    color: white;
     cursor: pointer;
     outline: 0;
     line-height: 18px;
@@ -258,7 +258,7 @@ header {
 }
 
 .services__item {
-    background: #fff;
+    background: white;
     padding: 30px 45px;
     border-radius: 12px;
     box-shadow: 0 0 60px 0 rgb(0 0 0 / 10%);
@@ -392,7 +392,7 @@ header {
     background-size: 200%;
     border: 1px solid transparent;
     border-radius: 40px;
-    color: #fff;
+    color: white;
     cursor: pointer;
     outline: 0;
     line-height: 18px;
@@ -434,7 +434,7 @@ header {
     font-size: 45px;
     background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
     background-size: 200%;
-    color: #fff;
+    color: white;
     width: 80px;
     height: 80px;
     line-height: 80px;
@@ -514,7 +514,7 @@ header {
 .item__title {
     box-shadow: 0 0 60px 0 rgb(0 0 0 / 10%);
     padding: 30px;
-    background-color: #fff;
+    background-color: white;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -544,7 +544,7 @@ header {
 .item__title:hover div,
 .item__title:hover h3,
 .item__title:hover i {
-    color: #fff
+    color: white
 }
 
 .item__title i {
@@ -778,7 +778,7 @@ header {
     padding: 30px 60px;
     border: 3px solid transparent;
     border-radius: 8px;
-    background-color: #fff;
+    background-color: white;
     box-shadow: 1px 0 50px rgb(0 0 0 / 10%);
     border-image: 100 round;
     transition: all .5s;
@@ -851,7 +851,7 @@ header {
     border: 1px solid transparent;
     transition: all .5s;
     border-radius: 30px;
-    color: #fff;
+    color: white;
     cursor: pointer;
     outline: 0;
     text-transform: uppercase;
@@ -1070,7 +1070,7 @@ header {
     background-size: cover;
     background-position: top center;
     text-align: center;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
 }
 
 .blog__content{
@@ -1171,12 +1171,11 @@ header {
 footer{
     background-image: url(../img/bg4.png);
     display: block;
-    height: auto;
     background-repeat: no-repeat;
     background-position: center;
     background-color: #0e1b1f;
     background-size: contain;
-    color: #fff;
+    color: white;
     font-size: 15px;
     position: relative;
 }
@@ -1206,7 +1205,6 @@ footer::before {
     box-shadow: 0 0 30px 0 rgb(0 0 0 / 10%);
     background-image: url(../img/pattern3.png);
     background-position: bottom;
-    background-repeat: no-repeat;
     background-size: 100%;
     position: relative;
     display: flex;
@@ -1232,12 +1230,12 @@ footer::before {
     font-size: 15px;
     font-weight: 400;
     color: #888;
-    background: #fff;
+    background: white;
     flex: 1 1 auto;
-    border-radius: 0.5rem 0 0 0.5rem;
+    border-radius: 12px 0 0 12px;
     border: 1px solid #fff;
     outline: 0;
-    transition: all .5s;
+    transition: all 0.6s;
 }
 
 .footer__form button{
@@ -1246,9 +1244,9 @@ footer::before {
     background-image: linear-gradient(to right,#f55f8d 0,#f8ae56 51%,#f55f8d 100%);
     background-size: 200%;
     border-color: transparent;
-    transition: all .5s;
-    border-radius: 0 0.5rem 0.5rem 0;
-    color: #fff;
+    transition: all 0.5s;
+    border-radius: 0 12px 12px 0;
+    color: white;
     cursor: pointer;
 }
 
@@ -1275,7 +1273,6 @@ footer::before {
 .footer__contact li{
     display: flex;
     align-items: center;
-    /* padding: 8px 0; */
 }
 
 
@@ -1285,9 +1282,9 @@ footer::before {
     line-height: 40px;
     margin-right: 10px;
     text-align: center;
+    border-radius: 50px;
     background: linear-gradient(to right,#f55f8d 0,#f8ae56 51%,#f55f8d 100%);
     display: block;
-    border-radius: 50px;
 }
 
 .footer__item span{
@@ -1302,7 +1299,7 @@ footer::before {
     padding-bottom: 10px;
     margin-bottom: 30px;
     position: relative;
-    color: #fff;
+    color: white;
 }
 
 .footer__item h3::after,.footer__item h3::before {
@@ -1338,9 +1335,9 @@ footer::before {
 .footer__item a{
     color: #636363;
     font-size: 16px;
-    transition: all .5s;
+    transition: all 0.5s;
     text-decoration: none;
-    line-height: 25px;
+    line-height: 21px;
 }
 
 .footer__item a:hover {
@@ -1370,16 +1367,16 @@ footer::before {
 }
 
 .copyright__right a{
-    height: 32px;
-    width: 32px;
-    line-height: 32px;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
     text-align: center;
     display: inline-block;
     border-radius: 50px;
     font-size: 14px;
-    color: #fff;
+    color: white;
     background-color: rgba(255,255,255,.1);
-    transition: all .5s;
+    transition: all 0.5s;
 }
 .copyright__right a:hover {
     background: #f55f8d
@@ -1397,8 +1394,8 @@ footer::before {
     position: fixed;
     right: 15px;
     bottom: 15px;
-    color: #fff;
-    transition: all 0.3s;
+    color: white;
+    transition: all 0.4s;
     font-size: 18px;
     box-shadow: -4px 4px 24px -10px #f55f8d;
     visibility: hidden;
