--- a/css/style.css
+++ b/css/style.css
@@ -1022,7 +1022,7 @@ header {
     box-shadow: 0 20px 50px 0 rgb(0 0 0 / 10%);
     margin: 20px 100px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: white;
     max-width: 770px;
     margin-left: auto;
     margin-right: auto;
@@ -1119,7 +1119,7 @@ header {
     border-radius: 6px;
     padding: 10px 20px;
     font-size: 14px;
-    color: #fff;
+    color: white;
     position: absolute;
     bottom: -20px;
     left: 15px
@@ -1200,7 +1200,7 @@ footer::before {
 
 .footer__top{
     padding: 50px 60px;
-    background-color: #fff;
+    background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 30px 0 rgb(0 0 0 / 10%);
     background-image: url(../img/pattern3.png);
@@ -1233,7 +1233,7 @@ footer::before {
     background: white;
     flex: 1 1 auto;
     border-radius: 12px 0 0 12px;
-    border: 1px solid #fff;
+    border: 1px solid white;
     outline: 0;
     transition: all 0.6s;
 }
